--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
           <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start"></div>
           <div class="col-xl-7 pl-0 pl-lg-5 pr-lg-1 d-flex align-items-stretch">
             <div class="content d-flex flex-column justify-content-center">
-              <h3>Voluptatem dignissimos provident quasi</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
-              </p>
+              <h3><strong>¿QUÉ ES LA INGENIERÍA BIOMÉDICA?</h3>
+              <p style="text-align: justify">La Ingeniería Biomédica busca desarrollar tecnología que resuelva problemas médicos a través de
+                soluciones innovadoras y la creación de productos orientados a mejorar la calidad de las personas, de forma que se transforme 
+                la salud en el Perú, sobre todo en zonas donde la demanda de servicios médicos no es satisfecha adecuadamente.</p>
               <div class="row">
                 <div class="col-md-6 icon-box">
                   <i class="bx bx-receipt"></i>
